GNOME Bugzilla – Bug 711754
gmain: Fix use of uninitialized memory in sigaction structure
Last modified: 2013-11-11 06:43:18 UTC
We were passing an uninitialized struct sigaction to sigaction(). Since struct sigaction values by platform, we should use memset to clear it.
Created attachment 259364 [details] [review] gmain: Fix use of uninitialized memory in sigaction structure
Attachment 259364 [details] pushed as 81d0ebe - gmain: Fix use of uninitialized memory in sigaction structure