gmain: Fix use of uninitialized memory in sigaction structure

https://bugzilla.gnome.org/show_bug.cgi?id=711754